@@ -400,6 +400,7 @@ CFRetain (CFTypeRef cf)
 
 
 extern void CFBooleanInitialize (void);
+extern void CFCalendarInitialize (void);
 extern void CFLocaleInitialize (void);
 extern void CFNullInitialize (void);
 extern void CFNumberFormatterInitialize (void);
@@ -417,16 +418,12 @@ void CFInitialize (void)
   NSCFTypeClass = [NSCFType class];
   
   // CFNotATypeClass should be at index = 0
-  __CFRuntimeObjCClassTable[__CFRuntimeClassTableCount] = NSCFTypeClass;
   _CFRuntimeRegisterClass (&CFNotATypeClass);
   
-  __CFRuntimeObjCClassTable[__CFRuntimeClassTableCount] = NSCFTypeClass;
   CFBooleanInitialize ();
-  __CFRuntimeObjCClassTable[__CFRuntimeClassTableCount] = NSCFTypeClass;
+  CFCalendarInitialize ();
   CFLocaleInitialize ();
-  __CFRuntimeObjCClassTable[__CFRuntimeClassTableCount] = NSCFTypeClass;
   CFNullInitialize ();
-  __CFRuntimeObjCClassTable[__CFRuntimeClassTableCount] = NSCFTypeClass;
   CFNumberFormatterInitialize ();
 }
 
