@@ -1,3 +1,11 @@
+2011-04-02 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFRuntime.m:
+	* Source/GNUmakefile:
+	* Source/CFCalendar.c:
+	* Headers/CoreFoundation/CFCalendar.h: Added empty CFCalendar.
+	* Source/CFLocale.c: Return a CFCalendar for kCFLocaleCalendar.
+
 2011-03-30 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFNumberFormatter.c: (CFNumberFormatterCreateStringWithValue)
